tests/types/errors/import_value_used_as_type.mog
const { Add } = @import("../../modules/math.mog")

var bad Add = 1
